// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test processor test snapshot test archives snapshot: archives 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "posts": Array [
          Object {
            "created": "2018-11-20T11:07:18Z",
            "id": 1,
            "title": "issus-1 title",
            "url": "/posts/1.html",
          },
          Object {
            "created": "2018-10-19T11:07:18Z",
            "id": 2,
            "title": "issus-2 title",
            "url": "/posts/2.html",
          },
        ],
        "year": "2018",
      },
      Object {
        "posts": Array [
          Object {
            "created": "2017-10-19T11:07:18Z",
            "id": 3,
            "title": "issus-3 title",
            "url": "/posts/3.html",
          },
        ],
        "year": "2017",
      },
      Object {
        "posts": Array [
          Object {
            "created": "2016-10-19T11:07:18Z",
            "id": 4,
            "title": "issus-4 title",
            "url": "/posts/4.html",
          },
        ],
        "year": "2016",
      },
    ],
    "pagination": Object {
      "currentPage": 1,
      "items": Array [
        Object {
          "active": true,
          "page": 1,
          "url": "/archives/index.html",
        },
      ],
      "nextPage": "",
      "prevPage": "",
    },
    "path": "/archives/index.html",
  },
]
`;

exports[`test processor test snapshot test index snapshot: index 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "created": "2018-11-20T11:07:18Z",
        "id": 1,
        "title": "issus-1 title",
        "url": "/posts/1.html",
      },
      Object {
        "created": "2018-10-19T11:07:18Z",
        "id": 2,
        "title": "issus-2 title",
        "url": "/posts/2.html",
      },
      Object {
        "created": "2017-10-19T11:07:18Z",
        "id": 3,
        "title": "issus-3 title",
        "url": "/posts/3.html",
      },
      Object {
        "created": "2016-10-19T11:07:18Z",
        "id": 4,
        "title": "issus-4 title",
        "url": "/posts/4.html",
      },
    ],
    "pagination": Object {
      "currentPage": 1,
      "items": Array [
        Object {
          "active": true,
          "page": 1,
          "url": "/index.html",
        },
      ],
      "nextPage": "",
      "prevPage": "",
    },
    "path": "/index.html",
  },
]
`;

exports[`test processor test snapshot test pages snapshot: pages 1`] = `
Array [
  Object {
    "content": "<h1 id=\\"abount-me\\" class=\\"heading\\"><a href=\\"#abount-me\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Abount me</h1>
<h2 id=\\"about-me-content\\" class=\\"heading\\"><a href=\\"#about-me-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>About me content</h2>
",
    "created": "2018-11-11T11:07:18Z",
    "id": 5,
    "name": "about",
    "path": "/about/index.html",
    "raw": "# Abount me 
 ## About me content",
    "title": "abount me",
    "type": "page",
    "updated": "2018-11-11T11:07:18Z",
    "url": "/about/",
  },
]
`;

exports[`test processor test snapshot test posts snapshot: posts 1`] = `
Array [
  Object {
    "body": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "created": "2018-11-20T11:07:18Z",
    "description": "",
    "frontMatter": Object {},
    "gitalk": false,
    "id": 1,
    "keywords": Array [],
    "labels": Array [],
    "number": 101,
    "path": "/posts/1.html",
    "raw": "## Header 
 ### Issues1 Content",
    "title": "issus-1 title",
    "updated": "2018-11-20T08:25:34Z",
    "url": "/posts/1.html",
    "user": Object {
      "avatar": "avatar_url",
      "homePage": "html_url",
      "name": "issues creator",
    },
  },
  Object {
    "body": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "created": "2018-10-19T11:07:18Z",
    "description": "",
    "frontMatter": Object {},
    "gitalk": false,
    "id": 2,
    "keywords": Array [],
    "labels": Array [
      Object {
        "color": undefined,
        "description": undefined,
        "id": "label-1",
        "name": "Label Name 1",
        "nodeId": undefined,
        "url": "/tags/label-1",
      },
    ],
    "number": 102,
    "path": "/posts/2.html",
    "raw": "## Header 
 ### Issues2 Content",
    "title": "issus-2 title",
    "updated": "2018-10-19T08:25:34Z",
    "url": "/posts/2.html",
    "user": Object {
      "avatar": "avatar_url",
      "homePage": "html_url",
      "name": "issues creator",
    },
  },
  Object {
    "body": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "created": "2017-10-19T11:07:18Z",
    "description": "",
    "frontMatter": Object {},
    "gitalk": false,
    "id": 3,
    "keywords": Array [],
    "labels": Array [],
    "number": 103,
    "path": "/posts/3.html",
    "raw": "## Header 
 ### Issues3 Content",
    "title": "issus-3 title",
    "updated": "2017-10-19T08:25:34Z",
    "url": "/posts/3.html",
    "user": Object {
      "avatar": "avatar_url",
      "homePage": "html_url",
      "name": "issues creator",
    },
  },
  Object {
    "body": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "created": "2016-10-19T11:07:18Z",
    "description": "",
    "frontMatter": Object {},
    "gitalk": false,
    "id": 4,
    "keywords": Array [],
    "labels": Array [
      Object {
        "color": undefined,
        "description": undefined,
        "id": "label-1",
        "name": "Label Name 1",
        "nodeId": undefined,
        "url": "/tags/label-1",
      },
    ],
    "number": 104,
    "path": "/posts/4.html",
    "raw": "## Header 
 ### Issues4 Content",
    "title": "issus-4 title",
    "updated": "2016-10-19T08:25:34Z",
    "url": "/posts/4.html",
    "user": Object {
      "avatar": "avatar_url",
      "homePage": "html_url",
      "name": "issues creator",
    },
  },
]
`;

exports[`test processor test snapshot test rssItems snapshot: rssItems 1`] = `
Array [
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/posts/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/posts/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/posts/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/posts/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2018-11-20T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues1-content\\" class=\\"heading\\"><a href=\\"#issues1-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues1 Content</h3>
",
    "guid": 1,
    "title": "issus-1 title",
    "url": "undefined/fdsaf/1.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2018-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues2-content\\" class=\\"heading\\"><a href=\\"#issues2-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues2 Content</h3>
",
    "guid": 2,
    "title": "issus-2 title",
    "url": "undefined/fdsaf/2.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [],
    "date": "2017-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues3-content\\" class=\\"heading\\"><a href=\\"#issues3-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues3 Content</h3>
",
    "guid": 3,
    "title": "issus-3 title",
    "url": "undefined/fdsaf/3.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
  Object {
    "author": "issues creator",
    "categories": Array [
      "Label Name 1",
    ],
    "date": "2016-10-19T11:07:18Z",
    "description": "<h2 id=\\"header\\" class=\\"heading\\"><a href=\\"#header\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Header</h2>
<h3 id=\\"issues4-content\\" class=\\"heading\\"><a href=\\"#issues4-content\\" aria-hidden=\\"true\\"><span class=\\"icon icon-link\\"></span></a>Issues4 Content</h3>
",
    "guid": 4,
    "title": "issus-4 title",
    "url": "undefined/fdsaf/4.html",
  },
]
`;
